force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/Quality_Control_Trigger_Case_Creation__mdt.object-meta.xml
<CustomObject>
    <description>Determines the case subject, type and material to be created when the quality control record matches the given criteria</description>
    <label>Quality Control Trigger Case Creation</label>
    <pluralLabel>Quality Control Trigger Case Creation</pluralLabel>
</CustomObject>