force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/Case_Material_If_Yes__c.field-meta.xml
<CustomField>
    <fullName>Case_Material_If_Yes__c</fullName>
    <description>Case will be created with this value for material when field &quot;QC Field Name for Material Option&quot; is Yes</description>
    <inlineHelpText>Case will be created with this value for material when field &quot;QC Field Name for Material Option&quot; is Yes</inlineHelpText>
    <label>Case Material If Yes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>