force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>Case will be created with this subject</description>
    <inlineHelpText>Case will be created with this subject</inlineHelpText>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>