force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case will be created with this type</description>
    <inlineHelpText>Case will be created with this type</inlineHelpText>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>