force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/List_of_QC_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>List_of_QC_Record_Types__c</fullName>
    <description>Comma-separated list of QC record type names - a case will be created only if the QC record type matches one of these</description>
    <inlineHelpText>Comma-separated list of QC record type names - a case will be created only if the QC record type matches one of these</inlineHelpText>
    <label>List of QC Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>