force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/QC_Field_Name_for_Material_Option__c.field-meta.xml
<CustomField>
    <fullName>QC_Field_Name_for_Material_Option__c</fullName>
    <description>Name of the QC field to check to determine the value of the case material</description>
    <inlineHelpText>Name of the QC field to check to determine the value of the case material</inlineHelpText>
    <label>QC Field Name for Material Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>