force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/QC_Field_Name_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>QC_Field_Name_to_Verify__c</fullName>
    <description>Name of the field in the Quality Control object that the trigger is supposed to check</description>
    <inlineHelpText>Name of the field in the Quality Control object that the trigger is supposed to check</inlineHelpText>
    <label>QC Field Name to Verify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>