force-app/main/default/objects/Quality_Control_Trigger_Case_Creation__mdt/fields/QC_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>QC_Field_Value__c</fullName>
    <description>Expected value of the field required for case creation</description>
    <inlineHelpText>Expected value of the field required for case creation</inlineHelpText>
    <label>QC Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>